--- a/controllers/units/create.htm
+++ b/controllers/units/create.htm
@@ -1,6 +1,6 @@
 <?php Block::put('breadcrumb') ?>
     <ul>
-        <li><a href="<?= Backend::url('arteriaweb/catalog/mycontrollers') ?>">Mycontroller</a></li>
+        <li><a href="<?= Backend::url('arteriaweb/catalog/units') ?>">Units</a></li>
         <li><?= e($this->pageTitle) ?></li>
     </ul>
 <?php Block::endPut() ?>
@@ -9,13 +9,17 @@
 
     <?= Form::open(['class' => 'layout']) ?>
 
+        <div class="layout-row">
+            <?= $this->formRender() ?>
+        </div>
+
         <div class="form-buttons">
             <div class="loading-indicator-container">
                 <button
                     type="submit"
                     data-request="onSave"
                     data-hotkey="ctrl+s, cmd+s"
-                    data-load-indicator="Creating Mycontrollers..."
+                    data-load-indicator="Creating Unit..."
                     class="btn btn-primary">
                     Create
                 </button>
@@ -24,18 +28,14 @@
                     data-request="onSave"
                     data-request-data="close:1"
                     data-hotkey="ctrl+enter, cmd+enter"
-                    data-load-indicator="Creating Mycontrollers..."
+                    data-load-indicator="Creating Unit..."
                     class="btn btn-default">
                     Create and Close
                 </button>
                 <span class="btn-text">
-                    or <a href="<?= Backend::url('arteriaweb/catalog/mycontrollers') ?>">Cancel</a>
+                    or <a href="<?= Backend::url('arteriaweb/catalog/units') ?>">Cancel</a>
                 </span>
             </div>
-        </div>
-
-        <div class="layout-row">
-            <?= $this->formRender() ?>
         </div>
 
     <?= Form::close() ?>
@@ -43,6 +43,6 @@
 <?php else: ?>
 
     <p class="flash-message static error"><?= e($this->fatalError) ?></p>
-    <p><a href="<?= Backend::url('arteriaweb/catalog/mycontrollers') ?>" class="btn btn-default">Return to mycontroller list</a></p>
+    <p><a href="<?= Backend::url('arteriaweb/catalog/units') ?>" class="btn btn-default">Return to units list</a></p>
 
 <?php endif ?>
