--- a/controllers/units/update.htm
+++ b/controllers/units/update.htm
@@ -1,6 +1,6 @@
 <?php Block::put('breadcrumb') ?>
     <ul>
-        <li><a href="<?= Backend::url('arteriaweb/catalog/mycontrollers') ?>">Mycontroller</a></li>
+        <li><a href="<?= Backend::url('arteriaweb/catalog/units') ?>">Units</a></li>
         <li><?= e($this->pageTitle) ?></li>
     </ul>
 <?php Block::endPut() ?>
@@ -9,33 +9,41 @@
 
     <?= Form::open(['class' => 'layout']) ?>
 
+        <div class="layout-row">
+            <?= $this->formRender() ?>
+        </div>
+
         <div class="form-buttons">
             <div class="loading-indicator-container">
                 <button
                     type="submit"
                     data-request="onSave"
+                    data-request-data="redirect:0"
                     data-hotkey="ctrl+s, cmd+s"
-                    data-load-indicator="Creating Mycontrollers..."
+                    data-load-indicator="Saving Unit..."
                     class="btn btn-primary">
-                    Create
+                    <u>S</u>ave
                 </button>
                 <button
                     type="button"
                     data-request="onSave"
                     data-request-data="close:1"
                     data-hotkey="ctrl+enter, cmd+enter"
-                    data-load-indicator="Creating Mycontrollers..."
+                    data-load-indicator="Saving Unit..."
                     class="btn btn-default">
-                    Create and Close
+                    Save and Close
+                </button>
+                <button
+                    type="button"
+                    class="oc-icon-trash-o btn-icon danger pull-right"
+                    data-request="onDelete"
+                    data-load-indicator="Deleting Unit..."
+                    data-request-confirm="Delete this unit?">
                 </button>
                 <span class="btn-text">
-                    or <a href="<?= Backend::url('arteriaweb/catalog/mycontrollers') ?>">Cancel</a>
+                    or <a href="<?= Backend::url('arteriaweb/catalog/units') ?>">Cancel</a>
                 </span>
             </div>
-        </div>
-
-        <div class="layout-row">
-            <?= $this->formRender() ?>
         </div>
 
     <?= Form::close() ?>
@@ -43,6 +51,6 @@
 <?php else: ?>
 
     <p class="flash-message static error"><?= e($this->fatalError) ?></p>
-    <p><a href="<?= Backend::url('arteriaweb/catalog/mycontrollers') ?>" class="btn btn-default">Return to mycontroller list</a></p>
+    <p><a href="<?= Backend::url('arteriaweb/catalog/units') ?>" class="btn btn-default">Return to units list</a></p>
 
 <?php endif ?>
